Working on the module, progress happens. Also renaming the variable names ;-)

--- a/LBM as a module.ipynb
+++ b/LBM as a module.ipynb
@@ -10,14 +10,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import cm\n",
-    "from lbm import simulation"
+    "from lbm import simulation as sim\n",
+    "from lbm import common as helper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "configuration = {\n",
+    "    \"reynolds\": 91,\n",
+    "    \"horizontal\": 500,\n",
+    "    \"vertical\": 180,\n",
+    "    \"scale\": 20,\n",
+    "    \"speed\": 0.04\n",
+    "} "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    simulation = sim.lattice_boltzmann(configuration)\n",
+    "except AssertionError:\n",
+    "    print(\"The configuration dictionary was incomplete.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "circular_obstacle = lambda x,y: (x-simulation.horizontal/4)**2+(y-simulation.vertical/2)**2 < simulation.speed**2\n",
+    " \n",
+    "try:\n",
+    "    simulation.set_obstacle(circular_obstacle) \n",
+    "except:\n",
+    "    print(\"Something went wrong. Is your obstacle correct?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "default_equilibrium = lambda rho, velocity: helper.equilibrium(rho, velocity, simulation.lattice_velocities, horizontal, vertical)\n",
+    "\n",
+    "try:\n",
+    "    simulation.set_equilibrium(default_equilibrium) \n",
+    "except:\n",
+    "    print(\"Something went wrong. Is your equilibrium correct?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "default_velocity = lambda horizontal, vertical: helper.velocity(configuration[\"speed\"], vertical)\n",
+    "\n",
+    "try:\n",
+    "    simulation.set_inflow_velocity(default_velocity)\n",
+    "except:\n",
+    "    print(\"Something went wrong. is your inflow_velocity correct? \")"
    ]
   },
   {
@@ -25,7 +95,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "try: \n",
+    "    simulation.initialise ()\n",
+    "except:\n",
+    "    print(\"Initialisation failed. What is happening?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "If this prints, everything worked on reboot\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"If this prints, everything worked on reboot\")"
+   ]
   }
  ],
  "metadata": {
