--- a/LBM as a module.ipynb
+++ b/LBM as a module.ipynb
@@ -68,17 +68,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "default_equilibrium = lambda rho, velocity: helper.equilibrium(rho, velocity, simulation.lattice_velocities, configuration[\"horizontal\"], configuration[\"vertical\"])\n",
+    "default_equilibrium = lambda rho, velocity: helper.equilibrium(rho, velocity, configuration[\"speed\"], configuration[\"horizontal\"], configuration[\"vertical\"])\n",
     "\n",
     "try:\n",
     "    simulation.set_equilibrium(default_equilibrium) \n",
     "except:\n",
-    "    print(\"Something went wrong. Is your equilibrium correct?\")"
+    "    print(\"Something went wrong. Is your equilibrium correct?\")  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,53 +92,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-0.04       -0.04000014 -0.04000028 ... -0.03999958 -0.03999972\n",
-      "  -0.03999986]\n",
-      " [-0.04       -0.04000014 -0.04000028 ... -0.03999958 -0.03999972\n",
-      "  -0.03999986]\n",
-      " [-0.04       -0.04000014 -0.04000028 ... -0.03999958 -0.03999972\n",
-      "  -0.03999986]\n",
-      " ...\n",
-      " [-0.04       -0.04000014 -0.04000028 ... -0.03999958 -0.03999972\n",
-      "  -0.03999986]\n",
-      " [-0.04       -0.04000014 -0.04000028 ... -0.03999958 -0.03999972\n",
-      "  -0.03999986]\n",
-      " [-0.04       -0.04000014 -0.04000028 ... -0.03999958 -0.03999972\n",
-      "  -0.03999986]]\n",
-      "Initialisation failed. What is happening?\n",
-      "[[-0.04       -0.04000014 -0.04000028 ... -0.03999958 -0.03999972\n",
-      "  -0.03999986]\n",
-      " [-0.04       -0.04000014 -0.04000028 ... -0.03999958 -0.03999972\n",
-      "  -0.03999986]\n",
-      " [-0.04       -0.04000014 -0.04000028 ... -0.03999958 -0.03999972\n",
-      "  -0.03999986]\n",
-      " ...\n",
-      " [-0.04       -0.04000014 -0.04000028 ... -0.03999958 -0.03999972\n",
-      "  -0.03999986]\n",
-      " [-0.04       -0.04000014 -0.04000028 ... -0.03999958 -0.03999972\n",
-      "  -0.03999986]\n",
-      " [-0.04       -0.04000014 -0.04000028 ... -0.03999958 -0.03999972\n",
-      "  -0.03999986]]\n"
+      "Initialisation failed. What is happening?\n"
      ]
     },
     {
-     "ename": "ValueError",
-     "evalue": "axes don't match array",
+     "ename": "AssertionError",
+     "evalue": "Sizes of $92.10, $92.15, speed_squared do not match on C:\\Users\\Daimonie\\Repositories\\LatticeBoltzmannD2Q9\\lbm\\common.py (14)",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-9-f48a5baac305>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mexcept\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Initialisation failed. What is happening?\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0msimulation\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minitialise\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\Repositories\\LatticeBoltzmannD2Q9\\lbm\\simulation.py\u001b[0m in \u001b[0;36minitialise\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     94\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minitial_velocity\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     95\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 96\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdistributions_equilibrium\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mequilibrium\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1.0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minitial_velocity\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     97\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdistributions\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdistributions_equilibrium\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     98\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mpropagate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-5-43b2ea43811d>\u001b[0m in \u001b[0;36m<lambda>\u001b[1;34m(rho, velocity)\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdefault_equilibrium\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mlambda\u001b[0m \u001b[0mrho\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvelocity\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mhelper\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mequilibrium\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrho\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvelocity\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msimulation\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlattice_velocities\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconfiguration\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"horizontal\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconfiguration\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"vertical\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0msimulation\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mset_equilibrium\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdefault_equilibrium\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mexcept\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: axes don't match array"
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-bc1703c956ef>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Initialisation failed. What is happening?\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdefault_equilibrium\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1.0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msimulation\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minitial_velocity\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-5-9b7c9fae3ccb>\u001b[0m in \u001b[0;36m<lambda>\u001b[1;34m(rho, velocity)\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdefault_equilibrium\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mlambda\u001b[0m \u001b[0mrho\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvelocity\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mhelper\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mequilibrium\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrho\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvelocity\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconfiguration\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"speed\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconfiguration\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"horizontal\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconfiguration\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"vertical\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0msimulation\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mset_equilibrium\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdefault_equilibrium\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mexcept\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAssertionError\u001b[0m: Sizes of $92.10, $92.15, speed_squared do not match on C:\\Users\\Daimonie\\Repositories\\LatticeBoltzmannD2Q9\\lbm\\common.py (14)"
      ]
     }
    ],
@@ -147,7 +120,8 @@
     "    simulation.initialise ()\n",
     "except:\n",
     "    print(\"Initialisation failed. What is happening?\")\n",
-    "simulation.initialise ()"
+    "\n",
+    "print(default_equilibrium(1.0, simulation.initial_velocity))"
    ]
   },
   {
